--- a/Oops_concepts in Python.ipynb
+++ b/Oops_concepts in Python.ipynb
@@ -17,10 +17,170 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b597157",
+   "id": "2717f78b",
    "metadata": {},
    "source": [
-    "Inheritance"
+    "# Class\n",
+    "\n",
+    "class varaible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b24eb9b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    a=10#class varaible\n",
+    "obj=Student()\n",
+    "print(obj.a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93746c7",
+   "metadata": {},
+   "source": [
+    "# Constructor\n",
+    "class class_name:\n",
+    "\n",
+    "    def __init__(self,paramerters_list):\n",
+    "    \n",
+    "        #constructor body"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4992ee3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name : Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self): # CREATING CONSTRUCTOR\n",
+    "        self.name = \"Python\" #instance variable\n",
+    "    def info(self):#instance Method\n",
+    "        print(\"Name : {}\".format(self.name))\n",
+    "s = Student()\n",
+    "s.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "073c3bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a : 10 b:20\n",
+      "a : 10 b:20\n",
+      "a : 10 b:20\n",
+      "a : 10 b:20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    a=10\n",
+    "    b=20\n",
+    "    def __init__(self):\n",
+    "        self.name = \"Python\"\n",
+    "    @classmethod\n",
+    "    def info(cls):\n",
+    "        print(\"a : {} b:{}\".format(Student.a,Student.b))\n",
+    "        print(\"a : {} b:{}\".format(cls.a,cls.b))\n",
+    "\n",
+    "s = Student()\n",
+    "s.info()\n",
+    "\n",
+    "Student.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dbf2050b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameterized constructor\n",
+      "Name : Adarsh and Id NO : 190063\n",
+      "Name : Ramu and Id NO : 190555\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,id): # parameterized constructor\n",
+    "        self.name = name\n",
+    "        self.id = id\n",
+    "    def info(self,name,id):\n",
+    "        print(\"Name : {} and Id NO : {}\".format(self.name,self.id))\n",
+    "        print(\"Name : {} and Id NO : {}\".format(name,id))\n",
+    "s = Student(\"Adarsh\",\"190063\") # object creation\n",
+    "print(\"Parameterized constructor\")\n",
+    "s.info(\"Ramu\",\"190555\") # calling info() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd937460",
+   "metadata": {},
+   "source": [
+    "# Constructor Over Loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4760204d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name : Adarsh\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    def __init__(self,name,id):\n",
+    "        self.id = id\n",
+    "        self.name = name\n",
+    "    def info(self):\n",
+    "        print(\"Name : {}\".format(self.name))\n",
+    "ds = Student(\"Adarsh\",10)\n",
+    "ds.info()"
    ]
   },
   {
@@ -77,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "60d52006",
    "metadata": {},
    "outputs": [
@@ -118,7 +278,8 @@
     "\n",
     "# Calling the abstract methods on the object\n",
     "print(rect.area())  # Output: 15\n",
-    "print(rect.perimeter())"
+    "print(rect.perimeter())\n",
+    " "
    ]
   },
   {
@@ -252,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9f60703",
+   "id": "964e2a03",
    "metadata": {},
    "outputs": [],
    "source": []
